--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,10 @@
 /** Desde aqui se modifico el componente <App> */
 /** Este es el "div" principal */
+*{
+	box-sizing: border-box
+}
+
 body {
-    background-color: rgb(218, 218, 218);
+    background-color: rgb(0, 0, 0);
     margin: 0;
 }
