Apunto de Crear filtro por Teams

--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -1,5 +1,5 @@
 .searchbar{
-    background-color: blueviolet;
+    background-color: rgb(255, 255, 255);
     border-style: none;
     border-radius: 5px;
     padding: 5px;
