--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,33 +1,68 @@
 .container{
     display: inline-block;
-    background-color: rgb(224, 11, 11);
-    width: 380px;
+    background-color: white;
+    width: 350px;
     border-radius: 30px;
     border-style: solid;
-    border-width: 8px;
-    border-color: rgb(155, 25, 25);
-    padding: 30px;
-    margin: 40px;
+    border-width: 5px;
+    border-color: rgb(255, 0, 0);
+    padding: 20px;
+    margin: 30px;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
 }
 
-.container__img{
+.container span{
+    display: inline-block;
+    margin-top: 15px;
+}
+
+.image{
     display: block;
-    border-radius: 6px;
+    width: 100%;
+    height: 300px;
+    border-style: solid;
+    border-color: rgb(255, 6, 6);
+    border-width: 5px;
+    border-radius: 20px;
 }
 
 .container__teams{
+    background-color: rgba(8, 8, 8, 0.144);
+    margin: 0;
+    margin-bottom: 20px;
+    padding: 20px 15px;
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
+    border-radius: 5px;
     gap: 0.5rem;
-    align-items: center; /* centra verticalmente */
-    height: 80px;
+    align-items: center;
+    justify-content: center;
+    min-height: 80px;
 }
 
 .container__button{
-    background-color: black;
-}
-.container__button__link{
-    text-decoration: none;
+    border-style: solid;
+    border-color: red;
+    border-radius: 5px;
+    border-width: 3px;
 }
 
+
+.container__button__link{
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 15px;
+    color: rgb(5, 5, 5);
+}
+
+.container__button:hover{
+    background-color: red;
+}
+
+.container__button:hover .container__button__link{
+    background-color: red;
+    color: white;
+}
