--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -26,6 +26,7 @@
     border-color: rgb(255, 6, 6);
     border-width: 5px;
     border-radius: 20px;
+    /* object-fit: cover; */
 }
 
 .container__teams{
