--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -45,10 +45,12 @@
 }
 
 .container__button{
+    background-color: white;
     border-style: solid;
     border-color: red;
     border-radius: 5px;
     border-width: 3px;
+    padding: 8px 5px;
 }
 
 
